# Part_RaspberryPi

./: .gitignore  CMakeLists.txt  README.md  Serial_test1.c  file.txt  looptest.c  main.c  termioreceive.c  termiosend.c  termiouart.c  termiouart2.c  termiouart3.c  thread3.c
integration/: SI.c  SI.h  main.c  test1.c  test2.c  test_loop.c  test_uart.c
serial_with_raspberry/: termioreceive.c  termiosend.c
thread/: thread1.c  thread2.c  thread4.c  thread5.c  thread6.c
